test(repository): native api metrics elasticsearch tests